# embedding.worker.faculytics

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.prod.yml
docs/: architecture.mdx  deployment.mdx  embedding-worker.mdx
src/: config.py  embedding.py  main.py  models.py
tests/: conftest.py  test_embeddings.py  test_health.py
